# SBFVAR

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
SBFVAR/: __init__.py  _cpz_funcs.py  _estimation.py  _estimation_cpz.py  _hyp_opt.py  _save.py  mfbvar_funcs.py
SBFVAR/cholcov/: setup.py
SBFVAR/inverse/: setup.py
SBFVAR/pseudo_inverse/: setup.py
SBFVAR/solve/: setup.py
docs/: conf.py
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_sources/: index.rst.txt
examples/: cpz_example.py  hist_m.csv  hist_q.csv  hist_small.xlsx  hist_w.csv  python_example.ipynb  python_example.py  test.csv  test.xlsx  test_q.xlsx
myenv/: pyvenv.cfg
tests/: test_cpz_fixes.py
