[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SBFVAR"
version = "0.1.1"
dependencies = [
"numpy",
"scipy",
"pandas",
"datetime",
"matplotlib",
"tqdm",
"plotly",
"fanchart",
"openpyxl",
"xlsxwriter",
"bayesian-optimization",
"arm-mango"
]
requires-python = ">= 3.8"
authors = [
  {name = "Laurent Florin", email = "laurent.florin@efv.admin.ch"}]
description = "Single base frequency VAR Model"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
]
[project.urls]
Repository = "https://gitea.efv.admin.ch/efv_fs/MUFBVAR.git"


[tool.hatch.envs.default.scripts]
build-docs = "sphinx-build -b html docs docs/_build/html"
auto-build-docs = "sphinx-autobuild docs docs/_build/html"