[build-system]
requires = ["setuptools", "pybind11", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["SBFVAR*"]

[project]
name = "SBFVAR"
version = "0.1.2"
dependencies = [
"numpy",
"scipy",
"pandas",
"datetime",
"matplotlib",
"tqdm",
"plotly",
"fanchart",
"openpyxl",
"xlsxwriter",
"bayesian-optimization",
"arm-mango",
"scikit-learn"
]
requires-python = ">= 3.8"
authors = [
  {name = "Laurent Florin", email = "laurent.florin@efv.admin.ch"}]
description = "Single Base Frequency Bayesian VAR Model"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
]
[project.urls]
Repository = "https://github.com/laurentflorin/SBFVAR.git"